change putg materials
